@@ -28,7 +28,9 @@
 #ifndef __DIR_INCLUDED
 #define __DIR_INCLUDED
 
-#if !defined __MINGW32__
+#if defined __MINGW32__
+#define cdecl
+#endif
 /*Directory entry size */
 #ifdef DIRSIZ
 #undef DIRSIZ
@@ -61,5 +63,4 @@ void seekdir(DIR *dirp,long loc);
 void rewinddir(DIR *dirp);
 void closedir(DIR *dirp);
 
-#endif
 #endif /* __DIR_INCLUDED */
