@@ -1278,7 +1278,6 @@ NtMakeCmdVector (char *cmdline, char ***vec, int InputCmd)
 }
 
 
-#if !defined __MINGW32__
 //
 // UNIX compatible directory access functions for NT
 //
@@ -1310,7 +1309,7 @@ opendir(char *filename)
     // check to see if we\'ve got a directory
     //
 
-    if ((stat (filename, &sbuf) < 0 ||
+    if ((win32_stat (filename, &sbuf) < 0 ||
 	sbuf.st_mode & _S_IFDIR == 0) &&
 	(!ISALPHA(filename[0]) || filename[1] != ':' || filename[2] != '\0' ||
 	((1 << (filename[0] & 0x5f) - 'A') & GetLogicalDrives()) == 0)) {
@@ -1467,7 +1466,6 @@ closedir(DIR *dirp)
 	free(dirp->start);
 	free(dirp);
 }
-#endif
 
 
 //
